// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Testing component > Should match snapshot when authenticated 1`] = `
"<div class=\\"flex-row\\">
  <div class=\\"grid gap-8 grid-cols-12 flex items-center\\">
    <div class=\\"col-start-1 col-end-9\\">
      <!-- Only show the two options when web client is authenticated-->
      <div class=\\"text-center space-x-6\\">
        <feedtopchoice></feedtopchoice>
      </div>
    </div>
    <div class=\\"col-span-4\\" data-test=\\"feed_filter_component\\">
      <feeddropdownfilter data-test=\\"feed_dropdown_filter\\"></feeddropdownfilter>
    </div>
  </div><!-- IF the following buttons is pressed-->
  <!--v-if-->
</div>"
`;

exports[`Testing component > Should match snapshot when not authenticated 1`] = `
"<div class=\\"flex-row\\">
  <div class=\\"grid gap-8 grid-cols-12 flex items-center\\">
    <div class=\\"col-start-1 col-end-9\\">
      <!-- Only show the two options when web client is authenticated-->
      <!--v-if-->
    </div>
    <div class=\\"col-span-4\\" data-test=\\"feed_filter_component\\">
      <feeddropdownfilter data-test=\\"feed_dropdown_filter\\"></feeddropdownfilter>
    </div>
  </div><!-- IF the following buttons is pressed-->
  <!--v-if-->
</div>"
`;
